--- a/gb/20/4/15/n12031534.md
+++ b/gb/20/4/15/n12031534.md
@@ -1,14 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zlnlsw205/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zlnlsw205/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zlnlsw205/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zlnlsw205/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zlnlsw205/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zlnlsw205/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zlnlsw205/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zlnlsw205/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zlnlsw205/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zlnlsw205/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zlnlsw205/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zlnlsw205/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zlnlsw205/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zlnlsw205/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zlnlsw205/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zlnlsw205/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zlnlsw205/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zlnlsw205/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zlnlsw205/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zlnlsw205/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zlnlsw205/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zlnlsw205/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>疫情期间 如何让新鲜食材“主动”上门？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/04/2020-04-14-17657-Fotolia_35653096_Subscription_L-600x400.jpg" />
 <h6>新鲜食材（Fotolia）
 </h6>
 <hr>
-<p>【大纪元2020年04月15日讯】（大纪元记者孔昭悉尼报导）自上个月以来，很多<ahref="https://github.com/zlnlsw205/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2%E4%BA%BA.md#1">澳洲人</a>开始<ahref="https://github.com/zlnlsw205/djy/blob/master/gb/tag/%E5%9C%A8%E5%AE%B6%E5%8A%9E%E5%85%AC.md#1">在家办公</a>，减少外出。米面粮油或许可以在家里多准备些，但生鲜食材、或是你喜爱的某家餐厅的某到料理，如何在足不出户的情况下等货上门？</p>
-<p>本文列出了多种<ahref="https://github.com/zlnlsw205/djy/blob/master/gb/tag/%E6%96%B0%E9%B2%9C%E9%A3%9F%E5%93%81.md#1">新鲜食品</a>送货上门的服务，还有当下比较流行的选食谱送食材的服务，以及大家都离不开的美食外卖服务，帮助读者朋友在疫情期间，美味、新鲜两不误。</p>
-<figure id="attachment_12031557" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/04/2020-04-14-17656-Fotolia_74097592_Subaion_L.jpg"><img class="size-medium wp-image-12031557" src="https://i.epochtimes.com/assets/uploads/2020/04/2020-04-14-17656-Fotolia_74097592_Subaion_L-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">新鲜蔬果（Fotolia）</figcaption></figure>
+<p>【大纪元2020年04月15日讯】（大纪元记者孔昭悉尼报导）自上个月以来，很多<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2%E4%BA%BA.md#1">澳洲人</a>开始<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%9C%A8%E5%AE%B6%E5%8A%9E%E5%85%AC.md#1">在家办公</a>，减少外出。米面粮油或许可以在家里多准备些，但生鲜食材、或是你喜爱的某家餐厅的某到料理，如何在足不出户的情况下等货上门？</p>
+<p>本文列出了多种<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E9%B2%9C%E9%A3%9F%E5%93%81.md#1">新鲜食品</a>送货上门的服务，还有当下比较流行的选食谱送食材的服务，以及大家都离不开的美食外卖服务，帮助读者朋友在疫情期间，美味、新鲜两不误。</p>
+<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://d1kgsi70b35buf.cloudfront.net/Z5fqLWxzm"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/sD4qywXogME?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
+	</div>
 <p>生鲜蔬果</p>
 <p>除了Coles，woolworth等超市提供的送货上门的服务，以下的几家店也能让你足不出户就享受到的本地新鲜农场生产的果蔬，乳制品，肉类等农产品。</p>
 <p>Harris farm</p>
@@ -20,7 +21,6 @@
 <p>Foodbomb</p>
 <p>www.foodbomb.com.au/</p>
 <p>这家原先也是主要供应餐馆和咖啡店等商家的生鲜供应商平台，目前也开放给普通家庭并提供送货上门的服务。这个平台的特色就是各类供应商都比较多，从生鲜、肉类再到水果、饮料等都有，而且可以看到客户的点评，对于第一次订购的消费者来说可以做为便利的参考。该平台目前只服务悉尼和墨尔本地区。运费由各家供应商决定，价格不等。</p>
-<figure id="attachment_12031560" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/04/2020-04-14-17658-Fotolia_84004964_Subaion_L.jpg"><img class="size-medium wp-image-12031560" src="https://i.epochtimes.com/assets/uploads/2020/04/2020-04-14-17658-Fotolia_84004964_Subaion_L-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">美味佳肴（Fotolia）</figcaption></figure>
 <p>Delish Deliveries</p>
 <p>www.delishdeliveries.com.au/</p>
 <p>这个平台的特点是，将蔬果、肉类及海鲜等食材搭配成盒。这些搭配好的食材还可以按照个人的喜好增减不同的品种，这点对消费者来说较为人性化。</p>
@@ -43,6 +43,7 @@
 <p>Parisi 网站订购 parisisydney.com</p>
 <p>Vic’s Meat 网站订购肉类产品 vicsmeatmarket.com.au.</p>
 <p>Claudio’s Seafoods? 邮件订购 orders@claudios.com.au, 短消息订购0417 421 497或者电话订购02 9660 5188.? article content begin -->00元起订。</p>
+<figure id="attachment_12031557" aria-describedby="caption-attachment-12031557" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/04/2020-04-14-17656-Fotolia_74097592_Subaion_L.jpg"><img class="size-medium wp-image-12031557" src="https://i.epochtimes.com/assets/uploads/2020/04/2020-04-14-17656-Fotolia_74097592_Subaion_L-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-12031557" class="wp-caption-text">新鲜蔬果（Fotolia）</figcaption></figure>
 <p>选好食谱 坐等食材</p>
 <p>每天都要为三餐做什么而头痛？看看下面这些网站，它们提供食谱，并配送所需的新鲜食材，让你轻松下厨，还省去了搭配采买食材的麻烦。目前这些网站主要提供西式的食谱，也有少量其它国家风味的食谱可供选择。</p>
 <p>Hellofresh</p>
@@ -61,6 +62,7 @@
 <p>如果消费者在当天11：59pm之前下单，次日下午3点至晚上8点之间会收到食材。目前服务范围仅限悉尼地区。运费统一为9.99元。</p>
 <p>下面还有其它两家类似的商家Dinnerly和Pepper Leaf，读者也可以去网站访问，尝试不同风味的食谱。</p>
 <p>www.dinnerly.com.au 和www.pepperleaf.com.au</p>
+<figure id="attachment_12031560" aria-describedby="caption-attachment-12031560" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/04/2020-04-14-17658-Fotolia_84004964_Subaion_L.jpg"><img class="size-medium wp-image-12031560" src="https://i.epochtimes.com/assets/uploads/2020/04/2020-04-14-17658-Fotolia_84004964_Subaion_L-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-12031560" class="wp-caption-text">美味佳肴（Fotolia）</figcaption></figure>
 <p>不想下厨？动动手指美味到</p>
 <p>今天不想做饭？那么订外卖吧！</p>
 <p>Uber Eats</p>
@@ -71,44 +73,44 @@
 <p>责任编辑：宗敏青</p>
 
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/12/n12024315.md#1">新州新感染病例降至七例 一个月以来最低</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/11/n12022337.md#1">尽管感染率下降 澳洲仍需严守社交距离半年</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/1/n11995936.md#1">纽约医师分享中共肺炎疗法 真的有效吗？</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/1/n11995235.md#1">“这些食物”补虾红素  护眼、有益糖尿病人</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/1/n11994802.md#1">澳洲医疗专家 健康人戴口罩外出是浪费资源</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/3/31/n11990151.md#1">防疫吃白、绿花椰菜　强化人体的“第一道防线”</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/3/30/n11989588.md#1">吃肉强化免疫力 美专家4方法抵御病毒</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/3/31/n11990201.md#1">减轻医院负担 医生吁澳人尽早接种流感疫苗</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/3/30/n11987632.md#1">澳洲卫生部：疫情症状 咳嗽最常见 发烧次之</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688102.md#1">新州洪灾后 悉尼发现蚊子传播罗斯河病毒</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687337.md#1">治疗严重哮喘药物纳入澳药品福利计划</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677705.md#1">隔离与过分清洁降低免疫力 感冒人数骤增</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/23/n13668630.md#1">研究：音乐改善健康 提高生活质量</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/24/n13671208.md#1">联邦拨款逾8000万 夫妇怀孕前基因检测免费</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/24/n13671147.md#1">澳宣布投资2.06亿  加强青年精神健康服务</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/22/n13663495.md#1">昆州学生流行“窒息挑战” 多人送医急救</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13655249.md#1">研究：染疫后遗症或与慢性疲劳综合症相关</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13654987.md#1">南澳日本脑炎病毒患者增至八人 一人死亡</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13654756.md#1">小型猪农：工业化养猪加速日本脑炎病毒传播</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/23/n11606736.md#1" target="_blank">林辉：文革天津非法监狱“六十三号”的罪恶</a></li><li><a href="https://github.com/zlnlsw205/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/16/5/13/n7891043.md#1" target="_blank">永恒的感恩</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/15/n10486558.md#1" target="_blank">【还原史实】国共内战中被欺骗的美国政府</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/9/n11374288.md#1" target="_blank">一对年轻夫妻“破镜重圆”的故事</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/13/n12025599.md#1">【拍案惊奇】中共军队频动作 传习近平或麻烦了</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/13/n12027648.md#1">大陆民企现状：工厂机器被砸 失业者人山人海</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/13/n12027860.md#1">【新闻看点】3000万人恐失业 北京遇4大挑战</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/13/n12027427.md#1">怎么测都不超37度 陆媒卧底测温枪交易群</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/13/n12026823.md#1">中领馆给美国州议长发私信求表扬 被骂脑残</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/12/n12023872.md#1">澳洲小狗故意贴地走路 嘲弄腿短的同伴</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/12/n12025294.md#1">不爽台湾被抹黑 洋女婿吴凤吁联署罢免谭德塞</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/13/n12025668.md#1">何妤玟惊曝年初离婚 自认不适合再当对方太太</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/13/n12027681.md#1">杨超越塞脏纸巾给助理 被批耍大牌没素质</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/14/n12029826.md#1">钮承泽性侵案 一审判4年徒刑</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/12/n12023749.md#1">民调：近半美国人认为 这波疫情是神的警示</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/13/n12027357.md#1">隔离带小孩好累 治疗师荐3游戏 孩子不再喊无聊</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/12/n12024552.md#1">古今传奇：天门为何人开启</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/13/n12026626.md#1">意男高音献唱“希望的音乐” 网上千万人看</a></li>
-<li><a href="https://github.com/zlnlsw205/djy/blob/master/gb/20/4/6/n12007147.md#1">糟老头和流浪汉偶露仙术  不留踪影在人间</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12141250.md#1">蓬佩奥：香港无自治 不再保证获美特殊待遇</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12140250.md#1">台加紧研发多种导弹 应对中共可能的攻台行动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/28/n12144173.md#1">李克强称6亿人月收入千元 震惊不少网友</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12141717.md#1">美宣布香港无自治 川普将采取哪些行动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12140587.md#1">中共早就知晓疫情？美国夫妇忆武汉惊魂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12138527.md#1">崔永元晒视频杠上胡锡进：千颗核弹头放你家</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12139391.md#1">黄秋生居家检疫出关 夸台湾防疫、想吃卤肉饭</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12137500.md#1">影帝吴朋奉骤逝 法医鉴定死因为脑中风</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12139000.md#1">欧阳娜娜演技遭负评 何炅打抱不平后又道歉</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12138702.md#1">疫情下贝克汉姆近照曝光 头发稀疏秃顶明显</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/18/n12042366.md#1">灾难前神明托梦示警 信者免遭劫难</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/4/7/n3559927.md#1">围棋别称中的故事</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/25/n12134403.md#1">“一鼓作气” 一场战争醒悟一生</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/10/n12019598.md#1">古典音乐之光——洪大的基奠，完美的结合</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/22/n12128808.md#1">世界唯一无坝引水都江堰  中华科学文明活见证</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zlnlsw205/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zlnlsw205/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/15/n12031534.htm">疫情期间 如何让新鲜食材“主动”上门？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/15/n12031534.htm">疫情期间 如何让新鲜食材“主动”上门？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zlnlsw205/djy/blob/master/gb/20/4/15/n12031534.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zlnlsw205/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zlnlsw205/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zlnlsw205/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zlnlsw205/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zlnlsw205/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/4/15/n12031534.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
